--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "parcel-project-template",
+  "name": "project1-team7",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://Xav8.github.io/project1-team7",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /project1-team7/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/Xav8/project1-team7.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Oancea Kevin <oanceakevin3@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/Xav8/project1-team7/issues"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0"
