--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ice-cream",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://github.com/Sfydas/ice-cream",
+  "homepage": "https://github.com/Sfydas/ice-cream/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /ice-cream/"
